gnome-disk-utility (3.26.2-2) UNRELEASED; urgency=medium

  * Switch maintainer from Utopia to Debian GNOME team
  * Update debian/gbp.conf and git branches for Debian GNOME conventions

 -- Jeremy Bicha <jbicha@debian.org>  Mon, 29 Jan 2018 14:42:52 -0500

gnome-disk-utility (3.26.2-1) unstable; urgency=medium

  * New upstream version 3.26.2
  * Bump Standards-Version to 4.1.1
  * Use https for Vcs-Git and Homepage
  * Use https in debian/watch
  * Update debian/copyright

 -- Michael Biebl <biebl@debian.org>  Tue, 31 Oct 2017 12:07:47 +0100

gnome-disk-utility (3.26.1-1) unstable; urgency=medium

  * New upstream version 3.26.1
  * Drop obsolete debian/gnome-disk-utility.maintscript

 -- Michael Biebl <biebl@debian.org>  Thu, 05 Oct 2017 23:46:57 +0200

gnome-disk-utility (3.26.0-1) unstable; urgency=medium

  * New upstream version 3.26.0

 -- Jeremy Bicha <jbicha@debian.org>  Wed, 13 Sep 2017 06:24:06 -0400

gnome-disk-utility (3.25.92-1) unstable; urgency=medium

  * New upstream version 3.25.92
  * Add Breaks against gnome-settings-daemon (<< 3.24)
  * Drop obsolete clean-up rule for libtool .la files
  * Use non-multiarch path /usr/lib/gnome-disk-utility for libexecdir

 -- Michael Biebl <biebl@debian.org>  Tue, 05 Sep 2017 16:15:08 +0200

gnome-disk-utility (3.25.91-1) unstable; urgency=medium

  * New upstream version 3.25.91
  * Build with meson
  * debian/control.in:
    - Drop obsolete Build-Depends on gnome-settings-daemon-dev
    - Bump minimum udisks2 to 2.7.2
  * debian/rules: Drop obsolete lines
  * Bump Standards-Version to 4.1.0

 -- Jeremy Bicha <jbicha@debian.org>  Wed, 30 Aug 2017 22:37:39 -0400

gnome-disk-utility (3.22.1-1) unstable; urgency=medium

  * New upstream release.
  * Bump debhelper compat level to 10.

 -- Michael Biebl <biebl@debian.org>  Tue, 08 Nov 2016 16:30:01 +0100

gnome-disk-utility (3.22.0-1) unstable; urgency=medium

  * Team upload.
  * New upstream version 3.22.0
